# VoiceTranscriptionApp

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: AudioProcessing.cpp  AudioProcessing.h  AudioProcessingDevice.cpp  AudioProcessingDevice.h  SafeQueue.cpp  SafeQueue.h
